Fixes a further forward slash in front of an asset link that was preventing an image being loaded on GitHub pages.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <a class="cta-button" href="#">Learn More <span class="visually-hidden">about mushrooms with our helpful reference guide</span></a>
                 </div>
 
-                <img src="/assets/nature.webp" alt="A sparse collection of small mushrooms growing on a verdant ridge.">
+                <img src="assets/nature.webp" alt="A sparse collection of small mushrooms growing on a verdant ridge.">
             </div>
         </section>
     </main>
