Adds a hamburger menu for the site's primary navigation. Menu is not currently functional. Adjusts the base image styles so that SVGs are excluded.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <body>
         <div class="site-header-content-wrapper">
             <img src="assets/fungi-finders.svg" alt="Fungi Finders">
+
+            <button class="primary-nav-button" aria-controls="primary-nav" aria-expanded="false">
+                <img src="assets/hamburger.svg" alt="">
+            </button>
     
-            <nav class="primary-nav">
+            <nav id="primary-nav" class="primary-nav">
                 <ul role="list">
                     <li class="semantic-only">
                         <a class="primary-nav-link" href="/">Discover</a>
