Adds the ability to toggle the navigation menu based on the nav button aria expanded attribute.

--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
     <meta name="description" content="Learn how to identify wild mushrooms and enjoy the pleasures of mushroom foraging.">
     <title>Fungi Finders</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
 </head>
 <header class="site-header">
         <body>
         <div class="site-header-content-wrapper">
             <img src="assets/fungi-finders.svg" alt="Fungi Finders">
 
-            <button class="primary-nav-button" aria-controls="primary-nav" aria-expanded="false">
+            <button aria-controls="primary-nav" aria-expanded="false">
                 <img src="assets/hamburger.svg" alt="">
             </button>
     
             <nav id="primary-nav" class="primary-nav">
                 <ul role="list">
                     <li class="semantic-only">
-                        <a class="primary-nav-link" href="/">Discover</a>
+                        <a href="/">Discover</a>
                     </li>
 
                     <li class="semantic-only">
-                        <a class="primary-nav-link" href="#">Mushroom Guide</a>
+                        <a href="#">Mushroom Guide</a>
                     </li>
 
                     <li class="semantic-only">
-                        <a class="primary-nav-link" href="#">FAQ</a>
+                        <a href="#">FAQ</a>
                     </li>
                 </ul>
             </nav>
