Adds a non-visual note to indicate the purpose of the navigation menu button.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
             <button aria-controls="primary-nav" aria-expanded="false">
                 <img src="assets/hamburger.svg" alt="">
+                <span class="visually-hidden">Navigation menu</span>
             </button>
     
             <nav id="primary-nav" class="primary-nav">
