Adds a buttont to handle skipping to the site's main content.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
 </head>
-<header class="site-header">
-        <body>
+<body>
+    <a class="skip-to-main" href="#main">Skip to main</a>
+    
+    <header class="site-header">
         <div class="site-header-content-wrapper">
             <img src="assets/fungi-finders.svg" alt="Fungi Finders">
 
@@ -37,7 +39,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="main">
         <section class="section flow" data-section-variant="hero" data-section-padding="compact">
             <h1 class="hero-heading">Discover the World of <span class="text-color-brand">Mushroom Foraging</span></h1>
 
