--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <meta name="description" content="Learn how to identify wild mushrooms and enjoy the pleasures of mushroom foraging.">
     <title>Fungi Finders</title>
+    <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
 </head>
 <body>
     <a class="skip-to-main" href="#main">Skip to main</a>
-    
+
     <header class="site-header">
         <div class="site-header-content-wrapper">
             <img src="assets/fungi-finders.svg" alt="Fungi Finders">
