Adds font preloads with priorities and types to allow for optional loading.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <meta name="description" content="Learn how to identify wild mushrooms and enjoy the pleasures of mushroom foraging.">
     <title>Fungi Finders</title>
-    <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high">
+    <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high" type="image/webp">
+    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" fetchpriority="high" type="font/woff2">
+    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2">
+    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2">
     <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
+    <script src="main.js" defer fetchpriority="low"></script>
 </head>
 <body>
     <a class="skip-to-main" href="#main">Skip to main</a>
