--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <meta name="description" content="Learn how to identify wild mushrooms and enjoy the pleasures of mushroom foraging.">
     <title>Fungi Finders</title>
+
+    <!-- Preloads -->
+    <link rel="preload" as="style" href="styles.css" type="text/css">
+    <link rel="preload" as="script" href="styles.css" type="text/js">
     <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high" type="image/webp">
-    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" fetchpriority="high" type="font/woff2">
-    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2">
     <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2">
+    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2">
+    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2">
+
+    <!-- Load stylesheets -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Load scripts -->
     <script src="main.js" defer fetchpriority="low"></script>
 </head>
 <body>
