--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <!-- Preloads -->
     <link rel="preload" as="style" href="styles.css" type="text/css">
-    <link rel="preload" as="script" href="styles.css" type="text/js">
+    <link rel="preload" as="script" href="styles.css" type="text/javascript">
     <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high" type="image/webp">
-    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2">
-    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2">
-    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2" crossOrigin>
+    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2" crossOrigin>
+    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2" crossOrigin>
 
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="styles.css">
