Adds explicit dimensions to all images to reduce potential jank.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
     <header class="site-header">
         <div class="site-header-content-wrapper">
-            <img src="assets/fungi-finders.svg" alt="Fungi Finders">
+            <img src="assets/fungi-finders.svg" width="157" height="32" alt="Fungi Finders">
 
             <button aria-controls="primary-nav" aria-expanded="false">
                 <img src="assets/hamburger.svg" alt="">
+
                 <span class="visually-hidden">Navigation menu</span>
             </button>
     
@@ -72,7 +73,12 @@
             <ul class="card-list equal-columns">
                 <li class="semantic-only">
                     <article class="card">
-                        <img src="assets/outdoor-exploration.webp" alt="A tightly grouped collection of brown mushrooms growing on a mossy tree trunk.">
+                        <img
+                            src="assets/outdoor-exploration.webp"
+                            width="329"
+                            height="240"
+                            alt="A tightly grouped collection of brown mushrooms growing on a mossy tree trunk."
+                        >
 
                         <h3 class="card-heading">Outdoor Exploration</h3>
 
@@ -82,7 +88,12 @@
 
                 <li class="semantic-only">
                     <article class="card">
-                        <img src="assets/botanical-expertise.webp" alt="A varied selection of harvested mushrooms placed on a wooden board.">
+                        <img
+                            src="assets/botanical-expertise.webp"
+                            width="329"
+                            height="240"
+                            alt="A varied selection of harvested mushrooms placed on a wooden board."
+                        >
 
                         <h3 class="card-heading">Botanical Expertise</h3>
 
@@ -92,7 +103,12 @@
 
                 <li class="semantic-only">
                     <article class="card">
-                        <img src="assets/culinary-delight.webp" alt="A slice of sourdough topped with greens, thinly sliced mushrooms and truffles, and a runny poached egg on a clear glass plate.">
+                        <img
+                            src="assets/culinary-delight.webp"
+                            width="329"
+                            height="240"
+                            alt="A slice of sourdough topped with greens, thinly sliced mushrooms and truffles, and a runny poached egg on a clear glass plate."
+                        >
 
                         <h3 class="card-heading">Culinary Delights</h3>
 
@@ -110,7 +126,13 @@
 
         <section class="section" data-section-background-color="dark" data-content-width="wide">
             <div class="equal-columns" data-gap="large" data-vertical-alignment="centered">
-                <img src="assets/get-to-know.webp" alt="A man knelt down in a forest harvesting a wild mushroom.">
+                <img 
+                    class="cta-image"
+                    width="656"
+                    height="491"
+                    src="assets/get-to-know.webp"
+                    alt="A man knelt down in a forest harvesting a wild mushroom."
+                >
 
                 <div class="flow fs-large">
                     <h2 class="section-heading">Get to know your mushrooms</h2>
@@ -123,7 +145,9 @@
                         It can feel like a big task, but we've got a handy reference guide to help you out!
                     </p>
 
-                    <a class="cta-button" href="#"><span class="visually-hidden">Learn more about wild mushrooms with our handy </span>Reference Guide</a>
+                    <a class="cta-button" href="#"><span class="visually-hidden">
+                        Learn more about wild mushrooms with our handy </span>Reference Guide
+                    </a>
                 </div>
             </div>
         </section>
@@ -137,10 +161,18 @@
                         Experience the beauty of the great outdoors while foraging for mushrooms with fellow enthusiasts.
                     </p>
                     
-                    <a class="cta-button" href="#">Learn More <span class="visually-hidden">about mushrooms with our helpful reference guide</span></a>
+                    <a class="cta-button" href="#">
+                        Learn More <span class="visually-hidden">about mushrooms with our helpful reference guide</span>
+                    </a>
                 </div>
 
-                <img src="assets/nature.webp" alt="A sparse collection of small mushrooms growing on a verdant ridge.">
+                <img
+                    class="cta-image"
+                    width="656"
+                    height="491"
+                    src="assets/nature.webp"
+                    alt="A sparse collection of small mushrooms growing on a verdant ridge."
+                >
             </div>
         </section>
     </main>
