Adds a favicon to the site in various sizes. Adds favicon attribution in the README.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <meta name="description" content="Learn how to identify wild mushrooms and enjoy the pleasures of mushroom foraging.">
     <title>Fungi Finders</title>
+    
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96.png">
 
     <!-- Preloads -->
     <link rel="preload" as="style" href="styles.css" type="text/css">
