Updates nav links for GitHub pages

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -44,11 +44,11 @@
             <nav id="primary-nav" class="primary-nav">
                 <ul role="list">
                     <li class="semantic-only">
-                        <a href="/">Discover</a>
+                        <a href="index.html">Discover</a>
                     </li>
 
                     <li class="semantic-only">
-                        <a href="#">Mushroom Guide</a>
+                        <a href="mushroom-guide.html">Mushroom Guide</a>
                     </li>
 
                     <li class="semantic-only">
