Styles the select boxes used for filtering the mushroom cards.

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -94,7 +94,7 @@
         <section class="section mushroom-guide flow" data-content-width="wide">
             <h2 class="section-heading">Get to know your mushrooms</h2>
 
-            <search>
+            <search class="flex-group">
                 <select name="" id="">
                     <option value="all">Season: All</option>
                     <option value="spring">Spring</option>
