Adds responsive bento layout for the FAQ section.

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -72,7 +72,7 @@
             </div>
         </section>
 
-        <section class="section" data-section-background-color="accent" data-content-width="wide">
+        <section class="section" data-section-background-color="accent" data-content-width="normal">
             <div class="equal-columns" data-gap="large" data-vertical-alignment="centered">
                 <img
                     src="assets/where-to-look.webp"
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section class="section mushroom-guide flow" data-content-width="wide">
+        <section class="section mushroom-guide flow" data-content-width="normal">
             <h2 class="section-heading">Get to know your mushrooms</h2>
 
             <search class="flex-group">
@@ -119,49 +119,51 @@
             data-section-background-color="dark"
             data-content-width="wide"
         >
-            <article>
-                <img
-                    src="assets/start-foraging.webp"
-                    alt="A woven basket filled with a wide variety of foraged mushrooms."
-                >
+            <div class="bento">
+                <article class="card">
+                    <img
+                        src="assets/start-foraging.webp"
+                        alt="A woven basket filled with a wide variety of foraged mushrooms."
+                    >
 
-                <h3>What do I need to start mushroom foraging?</h3>
+                    <h3 class="card-heading">What do I need to start mushroom foraging?</h3>
 
-                <p>You'll need a local field guide, a sharp knife or scissors, a basket or mesh bag for collecting, and paper bags for separating specimens. Bring a small brush for cleaning, wear sturdy boots, and carry a GPS device or compass to track your location. A camera is also helpful to document your finds.</p>
-            </article>
+                    <p>You'll need a local field guide, a sharp knife or scissors, a basket or mesh bag for collecting, and paper bags for separating specimens. Bring a small brush for cleaning, wear sturdy boots, and carry a GPS device or compass to track your location. A camera is also helpful to document your finds.</p>
+                </article>
 
-            <article>
-                <img
-                    src="assets/identify-mushrooms.webp"
-                    alt="A red capped mushroom with a broad white stalk being compared to a picture in a guidebook."
-                >
+                <article class="card">
+                    <img
+                        src="assets/identify-mushrooms.webp"
+                        alt="A red capped mushroom with a broad white stalk being compared to a picture in a guidebook."
+                    >
 
-                <h3>How can I identify edible mushrooms?</h3>
+                    <h3 class="card-heading">How can I identify edible mushrooms?</h3>
 
-                <p>Learn from experienced foragers and reliable guidebooks&mdash;never rely on apps alone. Study each mushroom's specific features like cap shape, gill structure, stem characteristics, and spore prints. Start with easily identifiable species that have no poisonous lookalikes, and never eat anything unless you're completely certain of its identification.</p>
-            </article>
+                    <p>Learn from experienced foragers and reliable guidebooks&mdash;never rely on apps alone. Study each mushroom's specific features like cap shape, gill structure, stem characteristics, and spore prints. Start with easily identifiable species that have no poisonous lookalikes, and never eat anything unless you're completely certain of its identification.</p>
+                </article>
 
-            <article>
-                <img
-                    src="assets/where-to-find.webp"
-                    alt="A red capped mushroom with a broad white stalk poking out from under a pile of dried out leaves."
-                >
+                <article class="card">
+                    <img
+                        src="assets/where-to-find.webp"
+                        alt="A red capped mushroom with a broad white stalk poking out from under a pile of dried out leaves."
+                    >
 
-                <h3>Where can I find foraging spots?</h3>
+                    <h3 class="card-heading">Where can I find foraging spots?</h3>
 
-                <p>Look in deciduous forests, especially near oak and maple trees, and in damp, shaded areas. Fallen logs and dead trees are often productive spots. Only forage on public lands where it's allowed, and always check local regulations. Remember to get permission for private property and keep your best locations private to prevent over-harvesting.</p>
-            </article>
+                    <p>Look in deciduous forests, especially near oak and maple trees, and in damp, shaded areas. Fallen logs and dead trees are often productive spots. Only forage on public lands where it's allowed, and always check local regulations. Remember to get permission for private property and keep your best locations private to prevent over-harvesting.</p>
+                </article>
 
-            <article>
-                <img
-                    src="assets/best-seasons.webp"
-                    alt="A red capped mushroom with a white spots nestled among autumn leaves on the forest floor."
-                >
+                <article class="card">
+                    <img
+                        src="assets/best-seasons.webp"
+                        alt="A red capped mushroom with a white spots nestled among autumn leaves on the forest floor."
+                    >
 
-                <h3>Where can I find foraging spots?</h3>
+                    <h3 class="card-heading">Where can I find foraging spots?</h3>
 
-                <p>Spring is ideal for morels, late summer brings chanterelles and boletes, and fall is peak season for most mushrooms including oysters and hen of the woods. Some species can even be found in winter, especially in milder climates. Each season offers different varieties, so year-round foraging is possible.</p>
-            </article>
+                    <p>Spring is ideal for morels, late summer brings chanterelles and boletes, and fall is peak season for most mushrooms including oysters and hen of the woods. Some species can even be found in winter, especially in milder climates. Each season offers different varieties, so year-round foraging is possible.</p>
+                </article>
+            </div>
         </section>
     </main>
 
