Adds FAQ link behaviour. Adds smooth scrolling.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
 
                     <li class="semantic-only">
-                        <a href="#">FAQ</a>
+                        <a href="mushroom-guide.html#faq">FAQ</a>
                     </li>
                 </ul>
             </nav>
