--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="semantic-only">
-                        <a href="#">FAQ</a>
+                        <a href="mushroom-guide.html#faq">FAQ</a>
                     </li>
                 </ul>
             </nav>
@@ -115,10 +115,14 @@
         </section>
 
         <section
-            class="section"
+            class="section flow"
             data-section-background-color="dark"
             data-content-width="wide"
         >
+            <h2 id="faq" class="section-heading">
+                Frequently asked questions
+            </h2>
+
             <div class="bento">
                 <article class="card">
                     <img
