Adds a note to the mushroom guide section for when filters match no results.

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -113,7 +113,7 @@
                 </select>
             </search>
 
-            <div id="mushroom-guide-cards" class="grid-auto-fit">
+            <div id="mushroom-guide-cards" class="grid-auto-fill">
                 <!-- Informational cards are added here dynamically -->
             </div>
         </section>
