Optimises the images on the second page and adds explicit sizes for them.

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -78,6 +78,8 @@
             <div class="equal-columns" data-gap="large" data-vertical-alignment="centered">
                 <img
                     src="assets/where-to-look.webp"
+                    width="724"
+                    height="803"
                     alt="A light brown mushroom with a wide cap, growing on the forest floor."
                 >
 
@@ -131,6 +133,8 @@
                 <article class="card">
                     <img
                         src="assets/start-foraging.webp"
+                        height="417"
+                        width="600"
                         alt="A woven basket filled with a wide variety of foraged mushrooms."
                     >
 
@@ -142,6 +146,8 @@
                 <article class="card">
                     <img
                         src="assets/identify-mushrooms.webp"
+                        height="417"
+                        width="600"
                         alt="A red capped mushroom with a broad white stalk being compared to a picture in a guidebook."
                     >
 
@@ -153,6 +159,8 @@
                 <article class="card">
                     <img
                         src="assets/where-to-find.webp"
+                        height="417"
+                        width="600"
                         alt="A red capped mushroom with a broad white stalk poking out from under a pile of dried out leaves."
                     >
 
@@ -164,6 +172,8 @@
                 <article class="card">
                     <img
                         src="assets/best-seasons.webp"
+                        height="600"
+                        width="864"
                         alt="A red capped mushroom with a white spots nestled among autumn leaves on the forest floor."
                     >
 
