Adds a no-js fallback to remove select filters.

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -100,7 +100,7 @@
 
             <search class="flex-group">
                 <label class="visually-hidden" for="seasonFilter">Select a harvest season</label>
-                <select name="seasonFilter" id="seasonFilter">
+                <select name="seasonFilter" id="seasonFilter" hidden>
                     <option value="all">Season: All</option>
                     <option value="spring">Spring</option>
                     <option value="summer">Summer</option>
@@ -108,7 +108,7 @@
                 </select>
 
                 <label class="visually-hidden" for="toxicityFilter">Select a toxicity</label>
-                <select name="toxicityFilter" id="toxicityFilter">
+                <select name="toxicityFilter" id="toxicityFilter" hidden>
                     <option value="all">Type: All</option>
                     <option value="edible">Edible</option>
                     <option value="toxic">Toxic</option>
