--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <!-- Preloads -->
     <link rel="preload" as="style" href="styles.css" type="text/css">
-    <link rel="preload" as="script" href="main.js" type="text/javascript" crossorigin">
+    <link rel="preload" as="script" href="main.js" type="text/javascript" crossorigin>
 
     <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high" type="image/webp">
-    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2" crossOrigin>
-    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2" crossOrigin>
-    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2" crossOrigin>
+    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2" crossorigin>
 
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="styles.css">
