--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -19,9 +19,9 @@
     <link rel="preload" as="fetch" href="data/mushrooms.json" type="application/json" crossorigin>
 
     <link rel="preload" as="image" href="assets/hero.webp" fetchpriority="high" type="image/webp">
-    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2" crossOrigin>
-    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2" crossOrigin>
-    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2" crossOrigin>
+    <link rel="preload" as="font" href="fonts/Outfit-VariableFont_wght.woff2" fetchpriority="high" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="fonts/FiraSans-Regular.woff2" fetchpriority="high" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="fonts/FiraSans-Bold.woff2" type="font/woff2" crossorigin>
 
     <!-- Load stylesheets -->
     <link rel="stylesheet" href="styles.css">
